[project]
name = "helpy"
description = "Library of Python helpers "
readme = "Readme.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name="Johannes Brust", email="johannes.brust@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "ruff"]

[project.urls]
"Homepage" = "https://github.com/johbrust/helpy"
"Bug Tracker" = "https://github.com/johbrust/helpy/issues"

[tool.setuptools]
packages = ["helpy"]

[tool.setuptools.dynamic]
version = {attr = "helpy.__version__"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
